[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/temp/grey_box.png" type="Texture" id=1]
[ext_resource path="res://scenes/characters/player/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/characters/player/PlayerStates.gd" type="Script" id=3]
[ext_resource path="res://scenes/characters/player/hud/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 5 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 7 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="PlayerStates" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Pivot" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Pivot"]
frames = SubResource( 2 )
animation = "idle"
speed_scale = 2.0

[node name="Hitbox" type="Area2D" parent="Pivot"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Hitbox"]
shape = SubResource( 4 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CollectSouls" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectSouls"]
shape = SubResource( 3 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="ShootInterval" type="Timer" parent="."]
wait_time = 0.08

[connection signal="animation_finished" from="Pivot/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="Pivot/AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="area_entered" from="Pivot/Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="CollectSouls" to="." method="_on_CollectSouls_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="ShootInterval" to="." method="_on_ShootInterval_timeout"]
